Update: get delinquent and individual_accounting_total
