# routes/profile.py
@@ -1,23 +1,11 @@
 from flask import jsonify, make_response, request, Blueprint
-from models import Profiles, Users
+from models import Profiles, Users, AccountingRecords, IndividualAccountingRecords
 from routes.auth import login_required
 import operator
 from functools import reduce
+from peewee import fn
 
 profile = Blueprint('profile', __name__)
-
-
-def get_part_full(part):
-    part_full = ""
-    if part == "S":
-        part_full = "Soprano"
-    elif part == "A":
-        part_full = "Alto"
-    elif part == "T":
-        part_full = "Tenor"
-    elif part == "B":
-        part_full = "Bass"
-    return part_full
 
 
 @profile.route('/profile', methods=['GET'])
@@ -42,11 +30,14 @@ def get_profiles(_):
         Profiles.name_kana,
         Profiles.grade,
         Profiles.part,
-        Users.status
+        Users.status,
+        fn.IF(Profiles.part == 'S', 'Soprano', fn.IF(Profiles.part == 'A', 'Alto', fn.IF(Profiles.part == 'T', 'Tenor', fn.IF(Profiles.part == 'B', 'Bass', '')))).alias('part_full')
     ).join(Users, on=(Profiles.user_id == Users.user_id).alias('Users')).where(expr)
     result = []
+    if len(query) == 0:
+        result = {"Error": "No Record Found"}
+        return make_response(jsonify(result), 400)
     for user in query:
-        part_full = get_part_full(user.part)
         result.append({
             "user_id": user.user_id,
             "last_name": user.last_name,
@@ -54,13 +45,13 @@ def get_profiles(_):
             "name_kana": user.name_kana,
             "grade": user.grade,
             "part": user.part,
-            "part_full": part_full,
+            "part_full": user.part_full,
             "status": user.Users.status
         })
     return make_response(jsonify(result))
 
 
-@profile.route('/profile/me/', methods=['GET'])
+@profile.route('/profile/me', methods=['GET'])
 @login_required
 def get_my_profile(user_id):
     query = Profiles.select(
@@ -70,9 +61,15 @@ def get_my_profile(user_id):
         Profiles.name_kana,
         Profiles.grade,
         Profiles.part,
-        Users.status
+        Users.status,
+        Users.email,
+        AccountingRecords.select(fn.IFNULL(fn.SUM(AccountingRecords.price), 0)).where((AccountingRecords.user_id == Profiles.user_id) & AccountingRecords.datetime.is_null()).alias('delinquent'),
+        IndividualAccountingRecords.select(fn.IFNULL(fn.SUM(IndividualAccountingRecords.price), 0)).where((IndividualAccountingRecords.user_id == Profiles.user_id)).alias('individual_accounting_total'),
+        fn.IF(Profiles.part == 'S', 'Soprano', fn.IF(Profiles.part == 'A', 'Alto', fn.IF(Profiles.part == 'T', 'Tenor', fn.IF(Profiles.part == 'B', 'Bass', '')))).alias('part_full')
     ).join(Users, on=(Profiles.user_id == Users.user_id).alias('Users')).where(Profiles.user_id == user_id)
-    part_full = get_part_full(query[0].part)
+    if len(query) == 0:
+        result = {"Error": "No Record Found"}
+        return make_response(jsonify(result), 400)
     result = {
         "user_id": query[0].user_id,
         "last_name": query[0].last_name,
@@ -80,14 +77,17 @@ def get_my_profile(user_id):
         "name_kana": query[0].name_kana,
         "grade": query[0].grade,
         "part": query[0].part,
-        "part_full": part_full,
-        "status": query[0].Users.status
+        "part_full": query[0].part_full,
+        "email": query[0].Users.email,
+        "status": query[0].Users.status,
+        "delinquent": int(query[0].delinquent),
+        "individual_accounting_total": int(query[0].individual_accounting_total)
     }
     return make_response(jsonify(result))
 
 
-@profile.route('/profile/<int:user_id>', methods=['GET'])
-@login_required
+@ profile.route('/profile/<int:user_id>', methods=['GET'])
+@ login_required
 def get_profile_by_user_id(_, user_id):
     query = Profiles.select(
         Profiles.user_id,
@@ -96,9 +96,12 @@ def get_profile_by_user_id(_, user_id):
         Profiles.name_kana,
         Profiles.grade,
         Profiles.part,
-        Users.status
+        Users.status,
+        fn.IF(Profiles.part == 'S', 'Soprano', fn.IF(Profiles.part == 'A', 'Alto', fn.IF(Profiles.part == 'T', 'Tenor', fn.IF(Profiles.part == 'B', 'Bass', '')))).alias('part_full')
     ).join(Users, on=(Profiles.user_id == Users.user_id).alias('Users')).where(Profiles.user_id == user_id)
-    part_full = get_part_full(query[0].part)
+    if len(query) == 0:
+        result = {"Error": "No Record Found"}
+        return make_response(jsonify(result), 400)
     result = {
         "user_id": query[0].user_id,
         "last_name": query[0].last_name,
@@ -106,7 +109,7 @@ def get_profile_by_user_id(_, user_id):
         "name_kana": query[0].name_kana,
         "grade": query[0].grade,
         "part": query[0].part,
-        "part_full": part_full,
+        "part_full": query[0].part_full,
         "status": query[0].Users.status
     }
     return make_response(jsonify(result))
